# de_zoomcamp_2026

./: .gitignore  README.md
01-docker-terraform/docker-sql/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py  requirements.txt
01-docker-terraform/terraform/: .terraform.lock.hcl  main.tf  variables.tf
02-workflow-orchestration/: README.md  docker-compose.yaml
03-data-warehouse/: README.md  load_yellow_taxi_data.py
04-analytics-engineering/: BIGQUERY_DBT_SETUP.md
04-analytics-engineering/refreshers/: SQL.md
04-analytics-engineering/taxi_rides_ny/: .gitignore  README.md  ingest.py
04-analytics-engineering/taxi_rides_ny_bigquery/: README.md  dbt_project.yml  ingest.py  ingest_fhv.py  load_yellow_taxi_data.py  profiles.example.yml
05-data-platforms/: .bruin.yml  .gitignore  README.md
05-data-platforms/my-taxi-pipeline/pipeline/: pipeline.yml
05-data-platforms/scripts/: bruin-validate.sh
06-batch/spark/: pyproject.toml  test_spark.py
06-batch/spark/code/: 03_test.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  09_spark_gcs.ipynb  download_data.sh  jupyter_server_config.py
06-batch/spark/homework/: homework.ipynb
07-streaming/homework/: README.md  pyproject.toml
07-streaming/streaming-workshop/: README.md  docker-compose.yaml
workshops/dlt_zoomcamp/: README.md  explore_books.py  main.py  open_library_pipeline.py  pyproject.toml
workshops/dlt_zoomcamp/dlt_zoomcamp/: __init__.py
workshops/taxi-pipeline/: README.md  check_duplicates.py  explore_taxi.py  pyproject.toml  taxi_pipeline.py
(+28 files in other folders)
